# wise_mans_haskell

./: README.md  book.html  book.md  index.html
formatting/: sample-handout.html  sample-handout.md
formatting/templates/: tufte.html5
formatting/tufte-css/: tufte.css
haskelltests/error_examples/: badDo.hs  errorTest1.hs  errorTest2.hs  errorTest3.hs
haskelltests/projects/irc/: .gitignore  ChangeLog.md  irc.cabal  package.yaml
haskelltests/projects/irc/app/: Main.hs
haskelltests/projects/irc/src/: Lib.hs  Main.hs
haskelltests/projects/project1/: LICENSE  README.md  project1.cabal  stack.yaml
haskelltests/projects/textAdventure/: README.md  textAdventure.cabal
haskelltests/projects/textAdventure/src/: Main.hs
haskelltests/should_compile/: GADTsTest1.hs  SafeHead.hs  SafeHeadTail.hs  benchPressJudger.hs  computeEnergy.hs  convertToDollars.hs  currency_basic_types.hs  currency_with_instance.hs  currency_with_newtype.hs  currency_with_newtype_derived.hs  describeLetterIfElse.hs  eitherDivide.hs  factorial.hs  getContentsExample.hs  goodDo.hs  goodDo2.hs  headMaybe.hs  invitationResponseFunctions.hs  invitationResponseFunctionsBetter.hs  isTrue.hs  length.hs  luckyNumber7.hs  luckyNumber7u.hs  makeURL.hs  map.hs  maybeAddOne.hs  maybeDivide.hs  maybeHead.hs  myProgram.hs  neck.hs  numberDoubler.hs  odds.hs  shapeTypes.hs  showFrench.hs  showFrenchBetter.hs  sillyMaybeBindTest.hs  sillyMaybeDoTest.hs  sillyMaybeDoTestNothing.hs  sillyMaybeDoTestPure.hs  sillyMaybeDoTestSub.hs  (+10 more)
illustratorfiles/: readFromFoo_comparison_1.ai
(+2 files in other folders)
