name:                textAdventure
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/textAdventure#readme
license:             BSD3
license-file:        LICENSE
author:              Andre Popovitch
maintainer:          example@example.com
copyright:           2018 Andre Popovitch
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable textAdventure
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
